LHC-2019 add ProductPurchaseView search
