# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-phloem/osb-koroneiki-phloem-rest-impl/rest-openapi.yaml
@@ -2400,6 +2400,10 @@ paths:
                   schema:
                       type: string
                 - in: query
+                  name: search
+                  schema:
+                      type: string
+                - in: query
                   name: state
                   schema:
                       type: string
